--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -48,7 +48,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#maps">Maps</a>
+            <a class="nav-link js-scroll-trigger" href="#analysis">Analysis</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#predictions">Predictions</a>
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="row text-center">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
@@ -98,7 +98,7 @@
             grocery stores, farmers' markets and
             healthy food providers. Approximately 23.5 million Americans live in food deserts.</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-dollar-sign fa-stack-1x fa-inverse"></i>
@@ -110,7 +110,7 @@
             raises
             concerns because although dollar stores typically sell milk and eggs, they do not sell fresh fruits or
             vegetables,
-            or other nutrionally-dense food products.</p>
+            or other nutritionally-dense food products.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -135,14 +135,18 @@
     </div>
   </section>
 
-  <!-- Maps -->
-  <section class="bg-light page-section" id="maps">
+  <!-- Analysis -->
+  <section class="bg-light page-section" id="analysis">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Maps</h2>
+          <h2 class="section-heading text-uppercase">Analysis</h2>
           <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
         </div>
+      </div>
+
+      <div class="portfolio-caption">
+        <h4>National Overview</h4>
       </div>
 
       <div class="row">
@@ -150,8 +154,9 @@
         <div class="col-sm-10 portfolio-item">
           <div class="portfolio-caption">
             <h4>Food Desert Map</h4>
-            <p class="text-muted">This map's color scheme displays the percentage of people, by county, living in food
-              deserts. The darkest color represents the largest number of people living in food deserts.</p>
+            <p class="text-muted">Food Desert problem is so prevalent that USDA has created an interactive website of
+              food desert map that finds all food desert
+              areas and provides statistical data on population with low access to food.</p>
           </div>
 
           <div class='tableauPlaceholder' id='viz1566064185455' style='position: relative'><noscript><a href='#'><img
@@ -227,34 +232,33 @@
         <div class="col-sm-1"></div>
         <div class="col-sm-10 portfolio-item">
           <div class="portfolio-caption">
-            <h4>Dollar/Grocery Store Trends</h4>
-            <p class="text-muted">Trends from 2009 to 2016.</p>
+            <h4>Dollar/Grocery Store Growth / Decline</h4>
+            <p class="text-muted">Growth/Decline from 2009 to 2016</p>
           </div>
-          <div class='tableauPlaceholder' id='viz1566177890553' style='position: relative'><noscript><a href='#'><img
+          <div class='tableauPlaceholder' id='viz1566428998463' style='position: relative'><noscript><a href='#'><img
                   alt=' '
-                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGroceryStoresHistoricalTrends2009-2016&#47;Dashboard1&#47;1_rss.png'
+                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresandGroceryStoresGrowth2009-2016&#47;Sheet1&#47;1_rss.png'
                   style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
               <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
               <param name='embed_code_version' value='3' />
               <param name='site_root' value='' />
-              <param name='name' value='DollarStoresGroceryStoresHistoricalTrends2009-2016&#47;Dashboard1' />
+              <param name='name' value='DollarStoresandGroceryStoresGrowth2009-2016&#47;Sheet1' />
               <param name='tabs' value='no' />
-              <param name='toolbar' value='no' />
+              <param name='toolbar' value='yes' />
               <param name='static_image'
-                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGroceryStoresHistoricalTrends2009-2016&#47;Dashboard1&#47;1.png' />
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresandGroceryStoresGrowth2009-2016&#47;Sheet1&#47;1.png' />
               <param name='animate_transition' value='yes' />
               <param name='display_static_image' value='yes' />
               <param name='display_spinner' value='yes' />
               <param name='display_overlay' value='yes' />
-              <param name='display_count' value='yes' />
-              <param name='filter' value='publish=yes' /></object></div>
+              <param name='display_count' value='yes' /></object></div>
           <script type='text/javascript'>
-            var divElement = document.getElementById('viz1566177890553');
+            var divElement = document.getElementById('viz1566428998463');
             var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%';
             vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
             var scriptElement = document.createElement('script');
             scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+            vizElement.parentNode.insertBefore(scriptElement, vizElement);              
           </script>
         </div>
       </div>
@@ -265,46 +269,55 @@
         <div class="col-sm-1"></div>
         <div class="col-sm-10 portfolio-item">
           <div class="portfolio-caption">
-            <h4>Dollar/Grocery Store Growth / Decline</h4>
-            <p class="text-muted">Growth/Decline from 2009 to 2016</p>
+            <h4>Dollar/Grocery Store Trends</h4>
+            <p class="text-muted">Trends from 2009 to 2016.</p>
           </div>
-          <div class='tableauPlaceholder' id='viz1566178015398' style='position: relative'><noscript><a href='#'><img
+          <div class='tableauPlaceholder' id='viz1566428820185' style='position: relative'><noscript><a href='#'><img
                   alt=' '
-                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresandGroceryStoresGrowth2009-2016&#47;Dashboard1&#47;1_rss.png'
+                  src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGroceryStoresHistoricalTrends2009-2016&#47;DollarStore_GroceryStorePercentofChange&#47;1_rss.png'
                   style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
               <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
               <param name='embed_code_version' value='3' />
               <param name='site_root' value='' />
-              <param name='name' value='DollarStoresandGroceryStoresGrowth2009-2016&#47;Dashboard1' />
+              <param name='name'
+                value='DollarStoresGroceryStoresHistoricalTrends2009-2016&#47;DollarStore_GroceryStorePercentofChange' />
               <param name='tabs' value='no' />
-              <param name='toolbar' value='no' />
+              <param name='toolbar' value='yes' />
               <param name='static_image'
-                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresandGroceryStoresGrowth2009-2016&#47;Dashboard1&#47;1.png' />
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DollarStoresGroceryStoresHistoricalTrends2009-2016&#47;DollarStore_GroceryStorePercentofChange&#47;1.png' />
               <param name='animate_transition' value='yes' />
               <param name='display_static_image' value='yes' />
               <param name='display_spinner' value='yes' />
               <param name='display_overlay' value='yes' />
-              <param name='display_count' value='yes' />
-              <param name='filter' value='publish=yes' /></object></div>
+              <param name='display_count' value='yes' /></object></div>
           <script type='text/javascript'>
-            var divElement = document.getElementById('viz1566178015398');
-            var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%';
-            vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+            var divElement = document.getElementById('viz1566428820185');
+            var vizElement = divElement.getElementsByTagName('object')[0];
+            vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
             var scriptElement = document.createElement('script');
             scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);               
+            izElement.parentNode.insertBefore(scriptElement, vizElement);                
           </script>
         </div>
       </div>
+    </div>
+  </section>
 
-      <br>
+  <!-- Predictions -->
+  <section class="bg-light page-section" id="predictions">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Predictions</h2>
+        </div>
+      </div>
 
       <!-- Maps by County -->
       <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-10 portfolio-item">
           <div class="portfolio-caption">
-            <h4>Charts by County</h4>
+            <h4>Machine Learning</h4>
           </div>
 
           <p class="text-muted">Please select State / County</p>
@@ -330,7 +343,7 @@
       <div class="row">
         <div class="col-sm-6 portfolio-item">
           <div class="portfolio-caption">
-            <h4>Grocery / Dollar Stores by County </h4>
+            <h4>Grocery vs Dollar Stores by County </h4>
           </div>
 
           <div id="graph1" style="padding-right:30px; width:100%;"></div>
@@ -338,21 +351,10 @@
 
         <div class="col-sm-6 portfolio-item">
           <div class="portfolio-caption">
-            <h4>Population - General vs. Food Desert</h4>
+            <h4>Population with Low Food Access</h4>
           </div>
 
           <div id="graph2" style="padding-right:30px; width:100%;"></div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Predictions -->
-  <section class="bg-light page-section" id="predictions">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Predictions</h2>
         </div>
       </div>
 
@@ -441,7 +443,7 @@
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-lg-10 col-sm-6">
-          <h4> Machine Learning</h4>
+          <h4> Data Retrieval</h4>
           <p class="text-muted"> pfjpsjposj fopsj pojdsfpo sjdpjspojfposjfppofjspofjposdjposjpofj spjspoj
             fpospjpojsdpojfpsjfpojspofjposjdfg </p>
         </div>
@@ -450,9 +452,35 @@
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-lg-10 col-sm-6">
-          <h4> Analysis</h4>
+          <h4> Data Analysis</h4>
           <p class="text-muted">p wejrpoweopjsd l;fjasufoj;osdjlkjs;lfj ;sf upsdif; mdlkdoiudpogk'km;fg dfgjpfogj
             rfgporgf grfgrpojgpofuww3ra'pcpf podfo</p>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Sources</h2>
+          <p class="text-muted"> The following resources were used: </p>
+          <ul>
+            <li>REFERENCES:AMERICAN FACT FINDER: https://factfinder.census.gov/faces/nav/jsf/pages/community_facts.xhtml
+            </li>
+            <li>NUTRITION ASSN.:http://americannutritionassociation.org/newsletter/usda-defines-food-deserts</li>
+            <li> https://www.census.gov/eos/www/naics/2017NAICS/2017_NAICS_Manual.pdf</li>
+            <li> https://www.hernandopa-fl.us/PAWebSite/forms/NAICS_%202017_to_2012.pdf</li>
+            <li> https://www.naics.com/naics-code-description/?code=445110</li>
+            <li> https://www.naics.com/naics-code-description/?code=452319</li>
+            <li> https://wwwn.cdc.gov/Nchs/Nhanes/2015-2016/DEMO_I.htm</li>
+            <li> https://wwwn.cdc.gov/nchs/nhanes/Default.aspx</li>
+            <li> “The Grocery Gap: Who Has Access to Healthy Food and Why It Matters:” Report from Policy Linkand the
+              Food Trust.STATISTA: https://www.statista.com</li>
+            <li> SHANNON: http://geography.uga.edu/directory/people/jerry-shannon</li>
+            <li> “Access to Affordable and Nutritious Food: Measuring and Understanding Food Deserts and their
+              Consequences:” Report (2009) to Congress from the United States Department of Agriculture ; </li>
+            <li> https://www.ers.usda.gov/data-products/food-access-research-atlas/download-the-data/</li>
+            <li> https://www.fns.usda.gov/snap/retailer-locator</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -463,7 +491,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Our Team</h2>
+          <h2 class="section-heading text-uppercase">Team</h2>
         </div>
       </div>
       <div class="row">
@@ -499,34 +527,34 @@
         </div>
       </div>
     </div>
-    <br>
+  </section>
 
-    <!-- <section class="bg-light page-section" id="copyright"> -->
-      <div class="container">
-        <div class="row">
-          <div class="row align-items-center">
-            <div class="col-sm-12">
-              <span class="copyright">Copyright &copy; 2019</span>
-            </div>
+  <section class="bg-light page-section" id="copyright">
+    <div class="container">
+      <div class="row">
+        <div class="row align-items-center">
+          <div class="col-sm-12">
+            <span class="copyright">Copyright &copy; 2019</span>
           </div>
         </div>
-      <!-- </div> -->
-    </section>
+      </div>
+    </div>
+  </section>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="../static/vendor/jquery/jquery.min.js"></script>
-    <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="../static/vendor/jquery/jquery.min.js"></script>
+  <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="../static/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="../static/vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <!-- Custom scripts for this template -->
-    <script src="../static/js/agency.min.js"></script>
+  <!-- Custom scripts for this template -->
+  <script src="../static/js/agency.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-    <script src="../static/js/Results.js"></script>
-    <script src="../static/js/LineGraphs.js"></script>
-    <script src="../static/js/app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+  <script src="../static/js/Results.js"></script>
+  <script src="../static/js/LineGraphs.js"></script>
+  <script src="../static/js/app.js"></script>
 
 </body>
 
