--- a/StoresDollar/templates/index.html
+++ b/StoresDollar/templates/index.html
@@ -33,6 +33,7 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <!-- <div style="background-image: url(../images/nasa.jpg); background-size: 100%;"></div> -->
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Food Deserts</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
@@ -150,7 +151,8 @@
               Dollar stores fill in the distance gap</a>
             in these rural and inner city communities by occupying smaller stores that are closer to low income
             populations. While dollar stores advertise convenience and affordability, the majority of their food
-            offerings are highly processed items that are low in nutritional value. This makes shopping choices harder for low income families with
+            offerings are highly processed items that are low in nutritional value. This makes shopping choices harder
+            for low income families with
             limited access to transportation.
             <p>
         </div>
@@ -162,7 +164,8 @@
             <h4>Food Desert by County</h4>
             <p class="text-muted">Mapped
               <a href="https://www.ers.usda.gov/data-products/food-access-research-atlas/" target="_blank">USDA data</a>
-              shows the percentage of county population identified as having low access to food. The largest tracts of low food access are in the Mountain Region.
+              shows the percentage of county population identified as having low access to food. The largest tracts of
+              low food access are in the Mountain Region.
               Counties with the highest numbers of food desert tracts are in the South and Midwest.
             </p>
           </div>
@@ -204,8 +207,9 @@
           <div class="portfolio-caption">
             <h4>Dollar Store Locations</h4>
             <p class="text-muted">On a national level, dollar stores are more densely located on the Eastern half of the
-              United States. This could be due to population density. Another potential factor is that the Dollar General headquarter offices are
-              located in 
+              United States. This could be due to population density. Another potential factor is that the Dollar
+              General headquarter offices are
+              located in
               <a href="https://money.cnn.com/2018/08/30/news/companies/dollar-general-dollar-tree-walmart-target-economy/index.html"
                 target="_blank">Tennessee</a>
               and North Carolina.
@@ -291,7 +295,8 @@
         <div class="col-sm-12 portfolio-item">
           <div class="portfolio-caption">
             <h4>GROWTH TRENDS OVER TIME</h4>
-            <p class="text-muted">Rate of change for dollar stores and grocery stores for populations with at least 25% of
+            <p class="text-muted">Rate of change for dollar stores and grocery stores for populations with at least 25%
+              of
               the population having low access to food.</p>
           </div>
           <div class='tableauPlaceholder' id='viz1566428820185' style='position: relative'><noscript><a href='#'><img
@@ -342,14 +347,16 @@
           <div class="portfolio-caption">
             <h4>MACHINE LEARNING PREDICTIONS</h4>
           </div>
-          <p class="text-muted">In order to see the effects of these businesses on people, all the input data was linked to 
+          <p class="text-muted">In order to see the effects of these businesses on people, all the input data was linked
+            to
             population. Since the number of residents vary greatly by
             the geographic size and density of each county, the training data was normalized by calculating the average
             number of residents serviced per store.</p>
 
           <p class="text-muted">Since the USDA only releases food access data every five years, 2010 and 2015, machine
             learning was utilized to fill in the gap years. For every year from 2005 to 2016, the number of people with
-            low access to food in each county was modeled on the average number of customers per stores, employee count and
+            low access to food in each county was modeled on the average number of customers per stores, employee count
+            and
             employee compensation.
           </p>
 
@@ -417,7 +424,8 @@
 
             <p class="text-muted">The dollar store scatter plot reveals that dollar stores tend to service a more
               concentrated population than grocery stores; fewer people have to share each store. (Median of 1,000 to
-              3,000 share a dollar store versus 3,000 to 8,000 sharing a grocery store.) This confirms that dollar stores
+              3,000 share a dollar store versus 3,000 to 8,000 sharing a grocery store.) This confirms that dollar
+              stores
               focus on proximity to customers, potentially making it more convenient for people to go to a dollar store
               rather than a grocery store.
             </p>
